force-app/main/default/objects/Data_Manager__mdt/Data_Manager__mdt.object-meta.xml
<CustomObject>
    <label>Data Manager</label>
    <pluralLabel>Data Manager</pluralLabel>
</CustomObject>