force-app/main/default/objects/Data_Manager__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to tell the program that this can be run.  Example use, you are using batch scheduling which runs all active Data Manager request.  You can use this field to choose which requests to run</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>