force-app/main/default/objects/Data_Manager__mdt/fields/Add_Suffix_Iterator__c.field-meta.xml
<CustomField>
    <fullName>Add_Suffix_Iterator__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Add a number to test data.</description>
    <inlineHelpText>If you are using test as an update value for a name fields, setting this will add test + [some number]</inlineHelpText>
    <label>Add Suffix Iterator</label>
    <type>Checkbox</type>
</CustomField>