force-app/main/default/objects/Data_Manager__mdt/fields/API_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>API_Field_Name__c</fullName>
    <description>The field name we want to update</description>
    <inlineHelpText>Field name to update</inlineHelpText>
    <label>API Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>