force-app/main/default/objects/Data_Manager__mdt/fields/Compare_API_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>Compare_API_Field_Name__c</fullName>
    <description>The API Field name that we are interested in using with our criteria</description>
    <inlineHelpText>The API Field name that we are interested in using with our criteria</inlineHelpText>
    <label>Compare API Field Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>