force-app/main/default/objects/Data_Manager__mdt/fields/Compare_Value__c.field-meta.xml
<CustomField>
    <fullName>Compare_Value__c</fullName>
    <description>The value that we are using for a criteria</description>
    <inlineHelpText>The value that we are using for a criteria.</inlineHelpText>
    <label>Compare Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>