force-app/main/default/objects/Data_Manager__mdt/fields/Compare_Value_Is_Blank__c.field-meta.xml
<CustomField>
    <fullName>Compare_Value_Is_Blank__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compare Value Is Blank</label>
    <type>Checkbox</type>
</CustomField>