force-app/main/default/objects/Data_Manager__mdt/fields/Has_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Has_Criteria__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Criteria</label>
    <type>Checkbox</type>
</CustomField>