force-app/main/default/objects/Data_Manager__mdt/fields/New_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Value__c</fullName>
    <description>Enter new value for updates</description>
    <inlineHelpText>Enter new value for updates</inlineHelpText>
    <label>New Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>