force-app/main/default/objects/Data_Manager__mdt/fields/New_Value_Is_Blank__c.field-meta.xml
<CustomField>
    <fullName>New_Value_Is_Blank__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Value Is Blank</label>
    <type>Checkbox</type>
</CustomField>