force-app/main/default/objects/Data_Manager__mdt/fields/Object_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name__c</fullName>
    <description>Object API Name we are interested in.  This should never be blank.</description>
    <inlineHelpText>Object API Name we are interested in.  This should never be blank.</inlineHelpText>
    <label>Object API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>