force-app/main/default/objects/Data_Manager__mdt/fields/Use_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Use_Criteria__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set if updates are based on a criteria.</description>
    <inlineHelpText>Set if updates are based on a criteria</inlineHelpText>
    <label>Use Criteria</label>
    <type>Checkbox</type>
</CustomField>