force-app/main/default/objects/Data_Manager__mdt/fields/Use_Query__c.field-meta.xml
<CustomField>
    <fullName>Use_Query__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use_Query</label>
    <type>Checkbox</type>
</CustomField>