force-app/main/default/objects/Data_Manager__mdt/fields/Use_SOQL__c.field-meta.xml
<CustomField>
    <fullName>Use_SOQL__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use SOQL</label>
    <type>Checkbox</type>
</CustomField>