force-app/main/default/objects/Data_Manager__mdt/fields/Verb__c.field-meta.xml
<CustomField>
    <fullName>Verb__c</fullName>
    <label>Verb</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Insert</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>