force-app/main/default/objects/Data_Manager__mdt/validationRules/Add_Suffix_Iterator.validationRule-meta.xml
<ValidationRule>
    <fullName>Add_Suffix_Iterator</fullName>
    <active>true</active>
    <description>Cannot be used when Use_SOQL is enabled</description>
    <errorConditionFormula>IF( Use_SOQL__c ,  Add_Suffix_Iterator__c = TRUE, false)</errorConditionFormula>
    <errorDisplayField>Add_Suffix_Iterator__c</errorDisplayField>
    <errorMessage>Cannot set Add Suffix Iterator when Use SOQL is checked</errorMessage>
</ValidationRule>