force-app/main/default/objects/Data_Manager__mdt/validationRules/API_Field_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>API_Field_Name</fullName>
    <active>true</active>
    <description>If not using custom query, this cannot be blank</description>
    <errorConditionFormula>IF( Use_SOQL__c != TRUE, IF( ISBLANK(  API_Field_Name__c  ) , true, false) , false)</errorConditionFormula>
    <errorDisplayField>API_Field_Name__c</errorDisplayField>
    <errorMessage>API Field Name Cannot be blank</errorMessage>
</ValidationRule>