force-app/main/default/objects/Data_Manager__mdt/validationRules/Cannot_be_blank_if_Notify_if_checked.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_be_blank_if_Notify_if_checked</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Email_Notification__c = true,  ISBLANK( Email_Recipient__c ) , false)</errorConditionFormula>
    <errorDisplayField>Email_Recipient__c</errorDisplayField>
    <errorMessage>Email recipient cannot be blank</errorMessage>
</ValidationRule>