force-app/main/default/objects/Data_Manager__mdt/validationRules/Cannot_be_insert_on_use_query.validationRule-meta.xml
<ValidationRule>
    <fullName>Cannot_be_insert_on_use_query</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Use_SOQL__c ,  ISPICKVAL( Verb__c , &#39;Insert&#39;) , false)</errorConditionFormula>
    <errorDisplayField>Verb__c</errorDisplayField>
    <errorMessage>Verb cannot be insert when Use SOQL  is selected</errorMessage>
</ValidationRule>