force-app/main/default/objects/Data_Manager__mdt/validationRules/Comparative_Operator.validationRule-meta.xml
<ValidationRule>
    <fullName>Comparative_Operator</fullName>
    <active>true</active>
    <description>if we are using a criteria comparative operator cannot be blank</description>
    <errorConditionFormula>IF( Has_Criteria__c ,  ISPICKVAL( Comparative_Operator__c, &#39;&#39;) , false)</errorConditionFormula>
    <errorDisplayField>Comparative_Operator__c</errorDisplayField>
    <errorMessage>Comparative operator cannot be blank</errorMessage>
</ValidationRule>