force-app/main/default/objects/Data_Manager__mdt/validationRules/Email_Recipient.validationRule-meta.xml
<ValidationRule>
    <fullName>Email_Recipient</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Email_Notification__c = false, true, false)</errorConditionFormula>
    <errorDisplayField>Email_Recipient__c</errorDisplayField>
    <errorMessage>Email Notification must be checked to use this feature</errorMessage>
</ValidationRule>