force-app/main/default/objects/Data_Manager__mdt/validationRules/Has_Criteria.validationRule-meta.xml
<ValidationRule>
    <fullName>Has_Criteria</fullName>
    <active>true</active>
    <description>Always set to false if Use SOQL is checked</description>
    <errorConditionFormula>IF( Use_SOQL__c = TRUE,  Has_Criteria__c = TRUE, false)</errorConditionFormula>
    <errorDisplayField>Has_Criteria__c</errorDisplayField>
    <errorMessage>Cannot check Use Criteria if Use SOQL is checked</errorMessage>
</ValidationRule>