force-app/main/default/objects/Data_Manager__mdt/validationRules/If_Has_Criteria_cannot_be_blank.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Has_Criteria_cannot_be_blank</fullName>
    <active>true</active>
    <description>If we select Has Criteria, this field cannot be blank.</description>
    <errorConditionFormula>IF( Has_Criteria__c ,IF( ISPICKVAL( Comparative_Operator__c , &#39;&#39;) , true, false), false)</errorConditionFormula>
    <errorDisplayField>Comparative_Operator__c</errorDisplayField>
    <errorMessage>You have selected Has Criteria.  Select a comparison operator</errorMessage>
</ValidationRule>