force-app/main/default/objects/Data_Manager__mdt/validationRules/Object_API_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Object_API_Name</fullName>
    <active>true</active>
    <description>Object API Name can never be blank</description>
    <errorConditionFormula>IF( ISBLANK( Object_API_Name__c ) , true, false)</errorConditionFormula>
    <errorDisplayField>Object_API_Name__c</errorDisplayField>
    <errorMessage>Object API Name is required</errorMessage>
</ValidationRule>