force-app/main/default/objects/Data_Manager__mdt/validationRules/query.validationRule-meta.xml
<ValidationRule>
    <fullName>query</fullName>
    <active>true</active>
    <errorConditionFormula>IF( Use_SOQL__c ,  ISBLANK( query__c ) , false)</errorConditionFormula>
    <errorDisplayField>query__c</errorDisplayField>
    <errorMessage>query field cannot be blank</errorMessage>
</ValidationRule>