force-app/main/default/objects/Data_Manager__mdt/validationRules/Record_Count.validationRule-meta.xml
<ValidationRule>
    <fullName>Record_Count</fullName>
    <active>true</active>
    <errorConditionFormula>IF( ISPICKVAL( Verb__c , &#39;Insert&#39;) ,  IF( Record_Count__c &lt;= 0 ||  ISNULL(Record_Count__c) , true, false) , false)</errorConditionFormula>
    <errorDisplayField>Record_Count__c</errorDisplayField>
    <errorMessage>Record count has to be greater than zero on insert</errorMessage>
</ValidationRule>