force-app/main/default/objects/Data_Manager__mdt/validationRules/Record_Count_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Record_Count_Update</fullName>
    <active>true</active>
    <description>If we are just Updating, record count is not allowed</description>
    <errorConditionFormula>IF( ISPICKVAL( Verb__c , &#39;Update&#39;) ,  IF( Record_Count__c &gt; 0, true, false) , false)</errorConditionFormula>
    <errorDisplayField>Record_Count__c</errorDisplayField>
    <errorMessage>Record count has to be zero or null on update</errorMessage>
</ValidationRule>