force-app/main/default/objects/Data_Manager__mdt/validationRules/Use_Criteria.validationRule-meta.xml
<ValidationRule>
    <fullName>Use_Criteria</fullName>
    <active>true</active>
    <description>Use Query OR Use Criteria can be used.  Use Query is designed to extend the basic criteria</description>
    <errorConditionFormula>IF( AND( Use_Query__c , Use_Criteria__c) , true, false)</errorConditionFormula>
    <errorDisplayField>Use_Criteria__c</errorDisplayField>
    <errorMessage>Use Query OR Use Criteria can be used.  Use Query is designed to extend the basic criteria</errorMessage>
</ValidationRule>