force-app/main/default/objects/Data_Manager__mdt/validationRules/Use_Query.validationRule-meta.xml
<ValidationRule>
    <fullName>Use_Query</fullName>
    <active>true</active>
    <description>Use Query OR Use Criteria can be used.  Use Query is designed to extend the basic criteria</description>
    <errorConditionFormula>IF( AND( Use_Query__c , Use_Criteria__c) , true, false)</errorConditionFormula>
    <errorDisplayField>Use_Query__c</errorDisplayField>
    <errorMessage>You cannot have both Use Query and Use Criteria checked</errorMessage>
</ValidationRule>