force-app/main/default/objects/Data_Manager__mdt/validationRules/Verb.validationRule-meta.xml
<ValidationRule>
    <fullName>Verb</fullName>
    <active>true</active>
    <description>Must have a value</description>
    <errorConditionFormula>IF( ISPICKVAL( Verb__c , &#39;&#39;) , true, false)</errorConditionFormula>
    <errorDisplayField>Verb__c</errorDisplayField>
    <errorMessage>You must select an action</errorMessage>
</ValidationRule>