force-app/main/default/objects/Data_Manager__mdt/validationRules/Verb_must_have_value.validationRule-meta.xml
<ValidationRule>
    <fullName>Verb_must_have_value</fullName>
    <active>true</active>
    <description>We need to know to insert or update</description>
    <errorConditionFormula>IF( ISPICKVAL( Verb__c , &#39;&#39;) , true, false)</errorConditionFormula>
    <errorDisplayField>Verb__c</errorDisplayField>
    <errorMessage>Verb requires a value</errorMessage>
</ValidationRule>